@@ -2,8 +2,9 @@ pyroscope (0.3.6) hardy; urgency=low
 
   * lstor: Added "-o" option to select output fields
   * rtcontrol: Print XMLRPC statistics when in verbose mode
+  * rtxmlrpc: Added --repr option
 
- -- pyroscope <pyroscope.project@gmail.com>  Sat, 21 Aug 2010 02:46:39 +0200
+ -- pyroscope <pyroscope.project@gmail.com>  Sat, 21 Aug 2010 18:24:17 +0200
 
 pyroscope (0.3.5) hardy; urgency=low
 
